--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "twig/extensions": "^1.5"
     },
     "require-dev": {
+        "deployer/deployer": "^6.2",
         "friendsofphp/php-cs-fixer": "^2.12",
         "squizlabs/php_codesniffer": "^3.3",
         "symfony/debug-pack": "*",
