--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^1.17",
+        "itk-dev/database-bundle": "^1.2",
         "lexik/form-filter-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
