--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "~7.2.0",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^1.17",
         "itk-dev/database-bundle": "^1.2",
