--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
         "beberlei/DoctrineExtensions": "^1.1",
+        "alterphp/easyadmin-extension-bundle": "^1.3",
         "easycorp/easyadmin-bundle": "^1.17",
         "itk-dev/database-bundle": "^1.2",
         "lexik/form-filter-bundle": "^5.0",
