Updated and added stuff

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -43,6 +43,7 @@ easy_admin:
              sortable: false
            - property: websites
            - property: enabled
+           - property: updatedAt
 
        show:
          fields:
