--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
     "require": {
         "php": "~7.2.0",
         "ext-iconv": "*",
+        "alterphp/easyadmin-extension-bundle": "^1.3",
         "api-platform/api-pack": "^1.1",
         "beberlei/DoctrineExtensions": "^1.1",
-        "alterphp/easyadmin-extension-bundle": "^1.3",
+        "cweagans/composer-patches": "^1.6",
         "easycorp/easyadmin-bundle": "^1.17",
         "itk-dev/database-bundle": "^1.2",
         "lexik/form-filter-bundle": "^5.0",
@@ -104,6 +105,11 @@
     "extra": {
         "symfony": {
             "allow-contrib": false
-        }
-    }
+        },
+				"patches": {
+						"easycorp/easyadmin-bundle": {
+								"Make property protected": "patches/easycorp/easyadmin-bundle/query-builder.patch"
+						}
+				}
+		}
 }
