Added created at to server list

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -49,6 +49,7 @@ easy_admin:
            - property: websites
            - property: enabled
            - property: updatedAt
+           - property: createdAt
 
        show:
          fields:
