--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -11,3 +11,8 @@ api_platform:
         yaml:     ['application/x-yaml']
         csv:      ['text/csv']
         html:     ['text/html']
+
+    collection:
+        pagination:
+            client_enabled: true
+            enabled_parameter_name: pagination
