--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -15,13 +15,13 @@ easy_admin:
                choices_static_callback: [getValuesList, [type]]
          fields:
            - property: domain
-             template: domain.html.twig
+             template: easy_admin/Website/domain.html.twig
            - property: server
            - property: documentRoot
            - property: type
            - property: version
            - property: data
-             template: data.html.twig
+             template: easy_admin/Website/data.html.twig
            - property: updatedAt
 
        show:
@@ -32,7 +32,7 @@ easy_admin:
            - property: type
            - property: version
            - property: data
-             template: data.html.twig
+             template: easy_admin/Website/data.html.twig
            - property: updatedAt
 
      Server:
@@ -44,7 +44,7 @@ easy_admin:
          fields:
            - property: name
            - property: data
-             template: data.html.twig
+             template: easy_admin/Server/data.html.twig
              sortable: false
            - property: websites
            - property: enabled
@@ -56,7 +56,7 @@ easy_admin:
            - property: name
            - property: enabled
            - property: data
-             template: data.html.twig
+             template: easy_admin/Server/data.html.twig
            - property: websites
 
        form:
