--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "~7.2.0",
+        "ext-ctype": "*",
         "ext-iconv": "*",
         "alterphp/easyadmin-extension-bundle": "^2.1",
         "api-platform/api-pack": "^1.1",
@@ -13,24 +14,25 @@
         "lexik/form-filter-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
-        "symfony/expression-language": "^4.1",
+        "symfony/asset": "4.2.*",
+        "symfony/console": "4.2.*",
+        "symfony/dotenv": "4.2.*",
+        "symfony/expression-language": "4.2.*",
         "symfony/flex": "^1.1",
-        "symfony/form": "^4.1",
-        "symfony/framework-bundle": "^4.1",
+        "symfony/form": "4.2.*",
+        "symfony/framework-bundle": "4.2.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "^1.0",
-        "symfony/process": "^4.1",
-        "symfony/security-bundle": "^4.1",
+        "symfony/orm-pack": "*",
+        "symfony/process": "4.2.*",
+        "symfony/security-bundle": "4.2.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "^4.1",
-        "symfony/twig-bundle": "^4.1",
-        "symfony/validator": "^4.1",
-        "symfony/web-link": "^4.1",
-        "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.1",
+        "symfony/translation": "4.2.*",
+        "symfony/twig-bundle": "4.2.*",
+        "symfony/validator": "4.2.*",
+        "symfony/web-link": "4.2.*",
+        "symfony/webpack-encore-bundle": "^1.1",
+        "symfony/yaml": "4.2.*",
         "twig/extensions": "^1.5",
         "webonyx/graphql-php": "^0.12.6"
     },
@@ -39,11 +41,10 @@
         "friendsofphp/php-cs-fixer": "^2.12",
         "squizlabs/php_codesniffer": "^3.3",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "^1.0",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/test-pack": "*",
+        "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
         "preferred-install": {
@@ -62,6 +63,8 @@
         }
     },
     "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
@@ -104,7 +107,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false
+            "allow-contrib": false,
+            "require": "4.2.*"
         },
         "patches": {
             "easycorp/easyadmin-bundle": {
