--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0",
-        "bootstrap-sass": "^3.3.7",
-        "node-sass": "^4.9.0",
-        "sass-loader": "^7.0.3"
+        "@symfony/webpack-encore": "^0.22.0",
+        "bootstrap-sass": "^3.4.1",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.1.0",
+        "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -11,6 +12,6 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production"
+        "build": "encore production --progress"
     }
 }
