Added markers on external links

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -5,6 +5,9 @@ easy_admin:
         assets:
             css:
                 - 'bundles/easyadmin/bootstrap-all.css'
+                - 'bundles/easyadminextension/stylesheet/full-width.css'
+                - 'build/easy_admin.css'
+
             js:
                 # By default, EasyAdminBundle embeds a limited version of Bootstrap JS.
                 # For collapsible form filters to work, a full version should be added:
