--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -83,6 +83,7 @@ easy_admin:
                      - property: createdAt
 
              show:
+                 max_results: 100
                  fields:
                      - property: name
                        template: easy_admin/Server/name.html.twig
