Updates and fixes

--- a/config/routes/easy_admin.yaml
+++ b/config/routes/easy_admin.yaml
@@ -1,4 +1,5 @@
 easy_admin_bundle:
-    resource: 'App\Controller\AdminController'
+    resource: '@EasyAdminBundle/Controller/AdminController.php'
+    # resource: 'App\Controller\AdminController'
     prefix: /admin
     type: annotation
