--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -39,11 +39,13 @@ easy_admin:
                  #       type_options:
                  #           choices_static_callback: [getValuesList, [type]]
 
+                 filters: ['type', 'server']
+
                  fields:
                      - property: domain
                        template: easy_admin/Website/domain.html.twig
                      - property: server
-                     - property: documentRoot
+                     # - property: documentRoot
                      - property: type
                      - property: version
                      - property: data
@@ -63,11 +65,14 @@ easy_admin:
                      - property: data
                        template: easy_admin/Website/data.html.twig
                      - property: updatedAt
+                     - property: search
 
          Server:
              class: App\Entity\Server
              disabled_actions: ['delete']
              list:
+                 filters: ['name']
+
                  actions: ['show']
                  max_results: 50
                  sort: [name, ASC]
