--- a/composer.json
+++ b/composer.json
@@ -5,44 +5,31 @@
         "php": "~7.3.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.1",
-        "beberlei/doctrineextensions": "^1.1",
-        "easycorp/easyadmin-bundle": "^2.1",
-        "lexik/form-filter-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^5.1",
-        "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/expression-language": "4.3.*",
-        "symfony/flex": "^1.1",
-        "symfony/form": "4.3.*",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "4.3.*",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
-        "symfony/web-link": "4.3.*",
-        "symfony/webpack-encore-bundle": "^1.1",
-        "symfony/yaml": "4.3.*",
-        "twig/extensions": "^1.5",
-        "webonyx/graphql-php": "^0.12.6",
-        "ext-json": "*"
+        "ext-json": "*",
+        "api-platform/api-pack": "^1.2",
+        "beberlei/doctrineextensions": "^1.2",
+        "easycorp/easyadmin-bundle": "^2.3",
+        "itk-dev/database-bundle": "^1.3",
+        "sensio/framework-extra-bundle": "^5.5",
+        "stof/doctrine-extensions-bundle": "^1.4",
+        "symfony/console": "5.0.*",
+        "symfony/dotenv": "5.0.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "5.0.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/process": "5.0.*",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "5.0.*",
+        "webonyx/graphql-php": "^0.13.8"
     },
     "require-dev": {
-        "deployer/deployer": "^6.2",
-        "friendsofphp/php-cs-fixer": "^2.12",
-        "squizlabs/php_codesniffer": "^3.3",
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.3.*"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsoftwig/twigcs": "^3.2",
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/debug-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.15",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/var-dumper": "5.0.*"
     },
     "config": {
         "preferred-install": {
@@ -64,6 +51,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
@@ -79,25 +67,29 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "check-coding-standards/php-cs-fixer": [
+        "coding-standards/check/php-cs-fixer": [
             "php -n vendor/bin/php-cs-fixer --config=.php_cs.dist fix --dry-run"
         ],
-        "check-coding-standards/phpcs": [
+        "coding-standards/check/phpcs": [
             "vendor/bin/phpcs --standard=phpcs.xml.dist"
         ],
-        "check-coding-standards": [
-            "@check-coding-standards/php-cs-fixer",
-            "@check-coding-standards/phpcs"
+        "coding-standards/check/twigcs": [
+            "twigcs templates"
         ],
-        "apply-coding-standards/php-cs-fixer": [
+        "coding-standards/check": [
+            "@coding-standards/check/php-cs-fixer",
+            "@coding-standards/check/phpcs",
+            "@coding-standards/check/twigcs"
+        ],
+        "coding-standards/apply/php-cs-fixer": [
             "php -n vendor/bin/php-cs-fixer --config=.php_cs.dist fix"
         ],
-        "apply-coding-standards/phpcs": [
+        "coding-standards/apply/phpcs": [
             "vendor/bin/phpcbf --standard=phpcs.xml.dist"
         ],
-        "apply-coding-standards": [
-            "@apply-coding-standards/php-cs-fixer",
-            "@apply-coding-standards/phpcs"
+        "coding-standards/apply": [
+            "@coding-standards/apply/php-cs-fixer",
+            "@coding-standards/apply/phpcs"
         ]
     },
     "conflict": {
@@ -105,8 +97,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
-            "require": "4.3.*"
+            "allow-contrib": true,
+            "require": "5.0.*"
         }
     }
 }
