Added "enabled" to api filters

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -17,6 +17,7 @@ easy_admin:
               params:
                   _format: csv
                   pagination: false
+                  enabled: true
 
     formats:
         datetime: 'd/m/Y H:i:s'
